--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
-    "leaflet": "^1.9.4",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
-    "date-fns": "^3.6.0"
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/leaflet": "^1.9.8",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
